# MailCraft

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
app/backend/: __init__.py  main.py
app/backend/admin/: cli.py
app/backend/api/: deps.py  rate_limit.py  routes_eval.py  routes_generate.py  routes_health.py
app/backend/core/: config.py  errors.py  logging.py  middleware.py  schemas.py  telemetry.py
app/backend/evaluation/: cli.py  fact_matching.py  metrics.py  reports.py  runner.py  scenarios.py
app/backend/llm/: base.py  bedrock_adapter.py  factory.py  gemini_adapter.py  mock_adapter.py
app/backend/persistence/: database.py  models.py  (+1 more)
app/frontend/: index.html
docs/: FINAL_REPORT.md  openapi.json
eval/references/: default_10.json
eval/scenarios/: default_10.json
prompts/: README.md
prompts/base/: baseline_v1.md
prompts/few_shot/: advanced_v1.md
tests/: conftest.py
tests/integration/: test_admin_cli.py  test_api_flow.py  test_cli.py  test_draft_lifecycle.py  test_error_envelopes.py  test_eval_api.py  test_eval_runner.py  test_health_endpoints.py  test_rate_limit.py  test_routes_coverage.py
tests/unit/: test_adapters.py  test_config.py  test_coverage_gaps.py  test_fact_matching.py  test_fallback_and_parsing.py  test_final_gaps.py  test_generation_parser.py  test_generation_service.py  test_golden_fixtures.py  test_metrics.py  test_metrics_edges.py  test_middleware_edges.py  test_mock_adapter.py  test_nonfunctional.py  test_prompt_builder.py  test_prompt_injection.py  test_reports.py  test_scenarios.py  test_schemas.py
(+12 files in other folders)
