[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailcraft"
version = "1.0.0"
description = "MailCraft — Turn intent into inbox-ready emails, powered by LLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MailCraft" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
    "orjson>=3.10.0",
    "numpy>=1.26.0",
    "tenacity>=8.3.0",
    "prometheus-client>=0.20.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/backend/evaluation/cli.py",
    "app/backend/main.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
